--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^9.8.8",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "cronstrue": "^2.44.0",
     "postcss": "^8.4.31",
     "purest": "^4.0.3",
     "react": "^17.0.2",
