--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Git-Blog",
-  "name": "Git Blog",
+  "short_name": "Diff Monster",
+  "name": "Diff Monster",
   "icons": [
     {
       "src": "favicon.ico",
