--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-js-cron": "^5.0.1",
     "react-parallax-tilt": "^1.7.42",
     "react-pdf": "^5.7.1",
+    "react-remark": "^2.1.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "^5.0.1",
     "react-select-search": "^4.1.7",
